# p-dmpc

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  1_veh_15.mat  2_veh_15_coll.mat  3_veh_15_coll.mat  Config.json  Copy_of_main.m  Evaluation.m  LICENSE  Max_Steering_Angle.m  TODO  cleanup.m  collect_results.sh  deploy_remote_hlcs.sh  main.m  main_distributed.m  main_distributed_plotting.m  main_distributed_plotting.sh  main_fallback.m  main_lab.m  main_lab_distributed.m  main_moving.m  main_nuc.m  main_nuc_simulation.m  main_sim_distributed.m  main_update.m  mainb.m  mainc.m  maind.m  measure_comm.m  readme.md  readme_mixed_traffic.md  repeat.m  run_experiment.m  run_scenario.m  run_simulation.m  simulate_distribution_locally.m  startup.m  (+15 more)
@Tree/: Tree.m  pathtoroot.m
@tree/: chop.m  depthfirstiterator.m  nodeCols.m  pathtoroot.m  tree.m
@tree2/: tree2.m
combined_graph/: CombinedGraph.m  combine_graphs.m  compute_product_maneuver_matrix.m
commun/: Communication.m  G29ForceFeedback.m  PredictionsCommunication.m  ROS2RunSlowWithCustomMessage.m  TrafficCommunication.m  callback_traffic_communication.m  communication_init.m  create_publishers.m  create_subscribers.m
communication/: Communication.m  G29ForceFeedback.m  callback_when_receiving_message.m  communicate_init_state.m  communication_init.m
config/: Config.m  ManualControlConfig.m  Mixed_traffic_config.m  functionSignatures.json
controller/: ControllResultsInfo.m  centralized_controller.m  pb_controller.m  pb_controller_fallback.m  pb_controller_mixed_traffic.m  pb_controller_parfor.m  pb_controller_parl.m  pb_controller_parl_ROS.m  pb_controller_parl_backup.m  pb_controller_seq.m
core/: create_poses.m  expand_tree.m  generate_tree.m  is_collision.m  is_equal_pose.m  is_goal.m  is_visited.m  maneuver_displacement.m  node.m  return_path.m  run_simulation.m  selection.m  test.m  translate_global.m  tuple2index.m
defines/: dt.m  h_p.m  h_u.m  offset.m  v_max.m  vehColor.m
doc/: CI.md  Reduce_Repository_Size.md  Run_Experiments.md  Unittests.md
docker/: Dockerfile  install.sh  login_credentials.sh  readme.md
docs/: Badges.md  CI.md  Debugging.md  Reduce_Repository_Size.md  Run_Experiments.md  (+5 more)
hlc/optimizer/graph_search_cpp/boost_cpm/: CMakeLists.txt
hlc/optimizer/graph_search_cpp/centralized/: CMakeLists.txt
hlc/optimizer/graph_search_cpp/centralized/include/: CentralizedConflictBasedFast.h  CentralizedConflictBasedLiterature.h  CentralizedCreatingDistribution.h  CentralizedGraphSearch.h  CentralizedGrouping.h  CentralizedGroupingConflictBased.h  CentralizedIncremental.h  CentralizedMonteCarloTreeSearch.h  CentralizedMonteCarloTreeSearchBasic.h  CentralizedNaiveMonteCarloLimitingSearchRange.h  CentralizedNaiveMonteCarloLimitingSearchRangeParallel.h  CentralizedNaiveMonteCarloPolymorphic.h  CentralizedNaiveMonteCarloPolymorphicParallel.h  CentralizedNaiveMonteCarloSimple.h  CentralizedOptimalLeafParallelization.h  CentralizedOptimalPolymorphic.h  CentralizedOptimalRootParallelization.h  CentralizedOptimalSimple.h
hlc/optimizer/graph_search_cpp/collision/: CMakeLists.txt
hlc/optimizer/graph_search_cpp/collision/include/: CollisionDetection.h  SAT.h  earcut.h  vec2.h
hlc/optimizer/graph_search_cpp/collision/src/: CollisionDetection.cpp  SAT.cpp
hlc/optimizer/graph_search_cpp/collision/test/: test.cpp
hlc/optimizer/graph_search_cpp/common/: CMakeLists.txt
hlc/optimizer/graph_search_cpp/common/include/: ConfigData.h  CouplingData.h  Evaluation.h  MPA.h  Maneuver.h  ScenarioType.h  VehicleData.h  VehicleObstaclesData.h  vec2_boost_adapter.h  vec2_geometry_operations.h
hlc/optimizer/graph_search_cpp/common/src/: ConfigData.cpp  MPA.cpp  ScenarioType.cpp  vec2_geometry_operations.cpp
hlc/optimizer/graph_search_cpp/matlab_utility/: CMakeLists.txt
hlc/optimizer/graph_search_cpp/matlab_utility/include/: ArrayTypePrinting.h  MatlabPrinter.h
hlc/optimizer/graph_search_cpp/matlab_utility/src/: ArrayTypePrinting.cpp  MatlabPrinter.cpp
hlc/optimizer/graph_search_cpp/matlab_utility/test/: mex_test.cpp  test.cpp
hlc/optimizer/graph_search_cpp/matplotlib/: CMakeLists.txt
hlc/optimizer/graph_search_cpp/matplotlib/include/: matplotlibcpp.h
hlc/optimizer/graph_search_cpp/mex/: CMakeLists.txt
hlc/optimizer/graph_search_cpp/mex/include/: ConfigDataMexFactory.h  CouplingDataMexFactory.h  MPAMexFactory.h  VehicleDataMexFactory.h  VehicleObstaclesDataMexFactory.h
hlc/optimizer/graph_search_cpp/mex/src/: centralized_main.cpp  priority_main.cpp
hlc/optimizer/graph_search_cpp/priority/: CMakeLists.txt
hlc/optimizer/graph_search_cpp/priority/include/: GraphSearchPBIncrementalOptimal.h  GraphSearchPBOptimal.h  PriorityBasedGraphSearch.h
hlc/optimizer/graph_search_cpp/utility/: CMakeLists.txt
hlc/optimizer/graph_search_cpp/utility/include/: ColMajorAccessor.h  ColMajorMatrixAccessor.h  ColMajorTensorAccessor.h  Eval.h  MatlabException.h  Printer.h  Sampler.h  Utils.h  Watchdog.h  generator.h
hlc/optimizer/graph_search_cpp/utility/src/: MatlabException.cpp  Printer.cpp  Watchdog.cpp
hlc/optimizer/graph_search_cpp/utility/test/: test.cpp
hlc/optimizer/graph_search_mex/: .clang-format  .gitignore  CMakeLists.txt  Function.m  GraphSearchMex.m  GraphSearchMexCentralized.m  GraphSearchMexPB.m  Makefile  compile.m
hlc/optimizer/graph_search_mex/include/: ColMajorAccessor.h  CollisionDetection.h  ConfigData.h  GraphSearch.h  GraphSearchCentralizedNaiveMonteCarlo.h  GraphSearchCentralizedNaiveMonteCarloPolymorphic.h  GraphSearchCentralizedOptimal.h  GraphSearchCentralizedOptimalMemorySaving.h  GraphSearchCentralizedOptimalPolymorphic.h  GraphSearchCentralizedOptimalPolymorphicSpeedHeuristic.h  GraphSearchCentralizedParallelNaiveMonteCarlo.h  GraphSearchCentralizedParallelNaiveMonteCarloPolymorphic.h  GraphSearchMEX.h  GraphSearchPBIncrementalOptimal.h  GraphSearchPBOptimal.h  GraphSearchSpecialization.h  MPA.h  MPA_MEX.h  Maneuver.h  MexException.h  Node.h  NodePtr.h  Printer.h  generator.h
hlc/optimizer/graph_search_mex/src/: main.cpp
hlc/optimizer/graph_search_mex/test/: test.m
(+2601 files in other folders)
